# dora-back

./: .dockerignore  .gitignore  Dockerfile  Dockerfile with Proxy  Dockerfile_with_Proxy  LICENSE  README.md  app.py  docker-compose.yml  init.sql  output.json  pyproject.toml  server.py  server_methods.py  st_app.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-pipeline.yaml
.streamlit/: config.toml
chatdoc/: __init__.py  chat_model.py  chatbot.py  citation.py  document_loader.py  embedding.py  local_llm.py  paperqa_bot.py  utils.py  vector_db.py
chatdoc/doc_loader/: document_loader.py  document_loader_factory.py  loader_factory.py
chatdoc/embed/: embedding_factory.py
serf/: class_defs.py  methods.py
server/: class_defs.py
server_modules/: __init__.py  class_defs.py  methods.py  models.py
streamlit_mods/: __init__.py  app_layout.py  endpoints.py
streamlit_mods/components/: main_screen.py  sidebar.py
streamlit_mods/helpers/: file_helper.py  message_helper.py  session_state_helper.py
templates/: chat.html
tests/: chat_model_test.py  citation_test.py  document_loader_test.py  embedding_factory_test.py  loader_factory_test.py
