[tool.poetry]
name = "dora-backend"
version = "0.0.1"
description = "The backend for Dora"
authors = ["Rohan Sobha <r.r.sobha@student.tudelft.nl>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.353"
unstructured = "^0.10.30"
pypdf = "^3.17.1"
tiktoken = "^0.5.1"
chromadb = "^0.4.17"
openai = "^1.2.4"
flask = {extras = ["async"], version = "^3.0.0"}
flask-cors = "^4.0.0"
pytest = "^7.4.3"
pydantic = "^2.5.3"
langchain-community = "^0.0.6"
langchain-core = "^0.1.4"
streamlit = "^1.29.0"
extra-streamlit-components = "^0.1.60"
streamlit-cookies-manager = "^0.2.0"
llama-cpp-python = "0.2.11"
sentence-transformers = "2.2.2"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
